[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/pixelart/powerup.png" type="Texture" id=1]
[ext_resource path="res://scenes/Powerup.gd" type="Script" id=2]
[ext_resource path="res://img/pixelart/pu_shadow.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[node name="Powerup" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Powerup" type="Sprite" parent="."]
position = Vector2( 0, -23 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 3

[node name="Track" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track"]
shape = SubResource( 2 )

[node name="PuShadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -1000, -1000, 2000, 2000 )

[connection signal="body_entered" from="." to="." method="_on_Powerup_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Powerup_body_exited"]
[connection signal="body_entered" from="Track" to="." method="_on_Track_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
